N-ary Tree Level Order Traversal